Apply hovered clamp style when reveal on hover is used (to prevent jumping content below item)

--- a/web/css/abstracts/mixins/_listing.less
+++ b/web/css/abstracts/mixins/_listing.less
@@ -38,6 +38,12 @@
             .price-box ~ * {
                 opacity: 1;
             }
+
+            & when not (@listing-grid-item-name__line-clamp = false) {
+                .product-item-name {
+                    .lib-css(-webkit-line-clamp, @listing-grid-item-name__hover__line-clamp);
+                }
+            }
         }
     }
 }
