--- a/web/css/layout/listing/_products.less
+++ b/web/css/layout/listing/_products.less
@@ -204,12 +204,6 @@
                         .lib-css(box-shadow, @listing-grid-item__hover__box-shadow);
                         .lib-css(background, @listing-grid-item__hover__background);
                     }
-
-                    & when not (@listing-grid-item-name__line-clamp = false) {
-                        .product-item-name {
-                            .lib-css(-webkit-line-clamp, @listing-grid-item-name__hover__line-clamp);
-                        }
-                    }
                 }
             }
             .product-item-inner {
